objects/Change_Awareness__c.object
<CustomObject>
    <fields>
        <fullName>ConcernedUsers__c</fullName>
        <label>Concerned Users</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumberUsers__c</fullName>
        <label>Number of Users</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Evaluation__c</fullName>
        <label>Risk Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - High</fullName>
                </value>
                <value>
                    <fullName>4 - Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15 minutes</fullName>
                </value>
                <value>
                    <fullName>30 minutes</fullName>
                </value>
                <value>
                    <fullName>1 heure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRAINTES EVOQUEES</fullName>
                </value>
                <value>
                    <fullName>DIFFICULTES DES PARTICIPANTS A COMPRENDRE</fullName>
                </value>
                <value>
                    <fullName>DIFFICULTES A SE METTRE  D ACCORD</fullName>
                </value>
                <value>
                    <fullName>DIFFICULTES A DONNER UNE REPONSE A VOS QUESTIONS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VerbatimSituation__c</fullName>
        <label>Verbatim / Situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workshop__c</fullName>
        <label>Workshop</label>
        <referenceTo>Workshop__c</referenceTo>
        <relationshipName>Change_Awarenesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sensibilisation au changement</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Sensibilisation au changement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensibilisations au changement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>